Bug 404892 - Cannot move entities, components, subsystems and nodes from sub folder to root folder
Summary: Cannot move entities, components, subsystems and nodes from sub folder to roo...
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.27.2 (KDE Applications 18.12.2)
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-02-28 07:02 UTC by Yuriy
Modified: 2019-02-28 12:36 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.27.3 (KDE Applications 18.12.3)
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Yuriy 2019-02-28 07:02:25 UTC
There is no luck when I try to "drag-and-drop" entities from folder to the root of ERD.

Steps to reproduce.
1. Create folder
2. Create entities in this folder.
3. Drag it to the root of Entity Relationship Model.
Comment 1 Ralf Habacker 2019-02-28 12:01:13 UTC
Thanks for reporting.

The same issue happens with components, subsystems and nodes.
Comment 2 Ralf Habacker 2019-02-28 12:09:53 UTC
Git commit a52e8b54c13bb6d7f21ed45d82fd38fd8c30907c by Ralf Habacker.
Committed on 28/02/2019 at 12:09.
Pushed by habacker into branch 'Applications/18.12'.

Fix 'Cannot move entities, components, subsystems and nodes from sub folder to root folder'
FIXED-IN:2.27.3 (KDE Applications 18.12.3)

M  +1    -1    umbrello/dialogs/pages/classgeneralpage.cpp
M  +8    -5    umbrello/model_utils.cpp

https://commits.kde.org/umbrello/a52e8b54c13bb6d7f21ed45d82fd38fd8c30907c
Comment 3 Ralf Habacker 2019-02-28 12:09:53 UTC
Git commit 749d3eac3fdba753f512e9d50e0ea5a8665cebe5 by Ralf Habacker.
Committed on 28/02/2019 at 12:09.
Pushed by habacker into branch 'Applications/18.12'.

Fix allowing moving of ports to a sub folder in the tree view

This change fixes the mouse indicator displayed while pressing
the left mouse button and moving the mouse over a folder.

M  +3    -1    umbrello/model_utils.cpp

https://commits.kde.org/umbrello/749d3eac3fdba753f512e9d50e0ea5a8665cebe5
Comment 4 Ralf Habacker 2019-02-28 12:36:44 UTC
Git commit cff43b124d50d4321ac58d46b9c38c9e13e45cf9 by Ralf Habacker.
Committed on 28/02/2019 at 12:36.
Pushed by habacker into branch 'Applications/18.12'.

Fix moving entities by property dialog

With the listed ticket the move via property dialog was added,
which still contained errors.

M  +1    -1    umbrello/dialogs/pages/classgeneralpage.cpp
M  +4    -2    umbrello/dialogs/widgets/umlpackagewidget.cpp
M  +2    -2    umbrello/umldoc.cpp
M  +1    -1    umbrello/umldoc.h

https://commits.kde.org/umbrello/cff43b124d50d4321ac58d46b9c38c9e13e45cf9