Fix 'Cannot move entities, components, subsystems and nodes from sub folder to root folder'

BUG:404892
FIXED-IN:2.27.3 (KDE Applications 18.12.3)